Change from grunt to gulp.

--- a/src/css/window.css
+++ b/src/css/window.css
@@ -48,6 +48,8 @@ table {
 
 .commandGrid .type, .commandGrid .value {
   width: 5em; }
+.commandGrid .draggable {
+  cursor: move; }
 .commandGrid .type {
   width: 20%; }
 .commandGrid .target {
