--- a/extension/css/window.scss
+++ b/extension/css/window.scss
@@ -44,6 +44,9 @@ html, body, div, span, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, co
   .target {
     width: 30%;
   }
+  select.target {
+    width: 28%;
+  }
   .value {
     width: 30%;
   }
